Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-4995

Powercfg standby time for batteries enabled when they aren't present.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.13
    • Other
    • None
    • Operating System: ReactOS
      Platform: x86 Hardware

    Description

      Created an attachment (id=5171)
      hacked powercfg

      That resources (watch on screenshot- two text labels and two icons) are not shown in trunk(english version also). They are:
      IDC_SAT
      IDC_IAC
      IDC_SAC
      IDC_IDC
      IDC_SDC
      This hack solves problem - in file \reactos\dll\cpl\powercfg\powershemes.c lines 120-124 change FALSE to TRUE.(you can see result on screenshot).
      But don't think it's a right solution because in lines 125-129 we see another resources with FALSE and they are displayed ok. As i said - this is only hack.

      Attachments

        Activity

          People

            ekohl ekohl
            igorko igorko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: