[POWERCFG] Fix the initialization of the power schemes page

CORE-4995